[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.4.10", features=["derive"] }
nom = "7.1.3"
regex = "1.10.2"
terminal_size = "0.3.0"
uuid = { version = "1.6.1", features = ["v4"] }
